componant layout issue fixed working....

--- a/apps/builder/src/app/views/acc-setting/acc-setting.component.css
+++ b/apps/builder/src/app/views/acc-setting/acc-setting.component.css
@@ -127,7 +127,7 @@ input.sub-btn {
             width: 100%;
             height: 40px;
             border: 1px solid #e5e7eb;
-            border-radius: 4px;
+      
             padding: 0 8px;
             line-height: 18px;
             font-size: 15px;
